# onwards

./: .gitmodules  Buffer.hh  CMakeLists.txt  Dockerfile  ErrorWords.cc  ErrorWords.hh  FILEWrapper.hh  FILE_wrapper.hh  File.cc  File.hh  FileMarshal.cc  Formatting.hh  IO.cc  IO.hh  IOfile.hh  LICENSE  LICENSE.md  ReadMe.md  Readme  ReceiveBuffer.hh  ReceiveBufferCompressed.hh  ReceiveBufferFile.hh  ReceiveBufferStack.hh  ReceiveBufferTCP.hh  SendBuffer.cc  SendBuffer.hh  SendBufferCompressed.cc  SendBufferCompressed.hh  SendBufferFile.cc  SendBufferFile.hh  SendBufferFlush.cc  SendBufferHeap.hh  SendBufferStack.hh  SendBufferStdString.cc  account_info.hh  ambassador.req  appveyor.yml  closeSocket.hh  close_socket.cc  close_socket.hh  (+45 more)
.circleci/: config.yml
.github/workflows/: main.yml
doc/: Middle_files  exceptions  headerFiles  middleFiles
example/: Readme  example.mdl  example.mdl.h  example.mdl.hh  example.req  makefile  messageIDs.hh  message_ids.hh  opaque.hh  plf_colony.h  receiveExample.cc  receive_example.cc  receive_sample.cc  sendExample.cc  send_example.cc  send_sample.cc  zz.exampleMessages.hh  zz.receiveMessages.hh  zz.receive_example_messages.hh  zz.receive_messages.hh  zz.receive_sample_messages.hh  zz.sendMessages.hh  zz.send_example_messages.hh  zz.send_messages.hh  zz.send_sample_messages.hh
example/poly/: base.h  base.hh  build.sh  receivePoly.cc  sendPoly.cc  testing.hh  testing.mdl  testing.mdl.h  testing.mdl.hh  zz.testing.hh
experimental/: BufferFile.hh  ReceiveBufferTCP.hh  makefile  messageID.hh  message_id.hh  middle_message.mdl  mio_mmapImpl.hh  upBuffer.hh
experimental/jni/: build.sh  genzMain.cc  jniGenz.java
poly/: receivePoly.cc  script  sendPoly.cc  testing.hh  testing.mdl
src/: ErrorWords.hh  cmwBuffer.hh  cmwComplex.hh  cmw_Buffer.h  cmw_Buffer.hh  cmw_BufferImpl.h  cmw_BufferImpl.hh  cmw_Complex.h  cmw_Complex.hh  mio_mmap.h  mio_mmapImpl.h  quicklz.c  quicklz.h  span.hh  wrappers.hh
src/cmw/: Buffer.hh  BufferImpl.hh  Complex.hh  ErrorWords.hh  quicklz.c  quicklz.h  wrappers.hh
src/cmw/poly/: receivePoly.cc  script  sendPoly.cc  testing.hh  testing.mdl  zz.testing.hh
src/cmw/tiers/: account.hh  anOunce.cc  back.hh  cmwA.cc  cmwA.cfg  cmwA.mdl  cmwA.mdl.hh  frntMddl.hh  frntMddl.mdl  frontMiddle.mdl  genz.cc  genz.mdl  genz.mdl.hh  mddlBck.hh  mddlBck.mdl  mdl  messageIDs.hh  middle.mdl  middleBack.mdl  zz.frntMddl.hh  zz.frontMiddle.hh  zz.mddlBck.hh  zz.middleBack.hh
src/poly/: testing.hh  zz.testing.hh
src/tiers/: account.h  account.hh  cmwA.cc  cmwA.cfg  cmwA.mdl  cmwA.mdl.h  cmwA.mdl.hh  cmwAmb.cc  cmwAmb.cfg  cmwAmb.mdl  cmwAmb.mdl.hh  credentials.hh  genz.cc  genz.mdl  genz.mdl.hh  iouring.cmwA.cc  messageIDs.hh  posix.cmwA.cc  ring_setup.hh
src/tiers/front/: genz.cc  genz.mdl  genz.mdl.h  genz.mdl.hh
tiers/: account.hh  account_info.hh  ambassador.req  cmw.req  cmwA.cc  cmwA.cfg  cmwAmbassador.cc  cmwAmbassador.cfg  direct.cc  frontMiddle.mdl  front_middle.mdl  genz.cc  local.mdl  makefile  makefile.windows  messageIDs.hh  message_ids.hh  middleBack.mdl  middleFront.mdl  middle_back.mdl  middle_front.mdl  string_join.hh  udp_stuff.hh  zz.frontMiddle.hh  zz.front_messages_middle.hh  zz.front_middle.hh  zz.middleBack.hh  zz.middleFront.hh  zz.middle_back.hh  zz.middle_front.hh  zz.middle_messages_back.hh  zz.middle_messages_front.hh
