cmake_minimum_required(VERSION 3.16)
project(onwards)
include_directories(src)
set(CMAKE_CXX_STANDARD 20)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    add_definitions(-Oz -flto -Wundef -W -Wall -Wextra -Wpedantic -Wreorder)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    add_definitions(-EHsc -nologo -D"NOMINMAX")
else()
    message(FATAL_ERROR "Unsupported compiler: ${CMAKE_CXX_COMPILER_ID}")
endif()

include(FetchContent)
FetchContent_Declare(liburing
	GIT_REPOSITORY https://github.com/axboe/liburing.git
	GIT_TAG 0df8a379e929641699c2ab1f42de1efd2515b908)
FetchContent_MakeAvailable(liburing)

add_executable(sendExample example/sendExample.cc)
add_executable(receiveExample example/receiveExample.cc)
add_executable(genz src/tiers/front/genz.cc)
if(WIN32)
    target_link_libraries(sendExample ws2_32)
    target_link_libraries(receiveExample ws2_32)
    target_link_libraries(genz ws2_32)
else()
    add_executable(cmwA src/tiers/cmwA.cc)
    add_executable(iouring.cmwA src/tiers/iouring.cmwA.cc)
    target_link_libraries(iouring.cmwA uring)
endif()
