cmake_minimum_required(VERSION 3.12)
project(onwards CXX)
include_directories(src)
set(CMAKE_CXX_STANDARD 20)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    add_definitions(-Oz -flto -Wundef -W -Wall -Wextra -Wpedantic -Wreorder)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    add_definitions(-EHsc -nologo -D"NOMINMAX")
else()
    message(FATAL_ERROR "Unsupported compiler: ${CMAKE_CXX_COMPILER_ID}")
endif()

add_executable(sendExample example/sendExample.cc)
add_executable(receiveExample example/receiveExample.cc)
add_executable(genz src/tiers/front/genz.cc)
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    target_link_libraries(sendExample ws2_32)
    target_link_libraries(receiveExample ws2_32)
    target_link_libraries(genz ws2_32)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    add_executable(cmwA src/tiers/cmwA.cc)
    target_link_libraries(cmwA uring)
endif()
