cmake_minimum_required(VERSION 3.12)
project(onwards CXX)

function(addExecutable name)
  add_executable("${name}" ${ARGN})
  target_compile_features("${name}" PRIVATE cxx_std_20)
  target_include_directories("${name}" PRIVATE src)
endfunction()

addExecutable(sendExample example/sendExample.cc)
addExecutable(receiveExample example/receiveExample.cc)
addExecutable(genz src/tiers/front/genz.cc)
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    target_link_libraries(sendExample PRIVATE ws2_32)
    target_link_libraries(receiveExample PRIVATE ws2_32)
    target_link_libraries(genz PRIVATE ws2_32)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    addExecutable(cmwA src/tiers/cmwA.cc)
    target_link_libraries(cmwA PRIVATE uring)
endif()
